<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileOptionsActivity"
        android:background="#000">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profileOptionsRoot">

        <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:id="@+id/back_button"/>

        <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_button"
                android:layout_marginTop="8dp"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/linearLayout3"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp">

            <TextView
                    android:padding="8dp"
                    android:textSize="24dp"
                    android:text="@string/nedir"
                    android:id="@+id/option1_what"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:padding="8dp"
                    android:textSize="24dp"
                    android:text="@string/profili_duzenle"
                    android:id="@+id/option2_editprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:padding="8dp"
                    android:textSize="24dp"
                    android:text="@string/soru_oner"
                    android:id="@+id/option3_sendquestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:padding="8dp"
                    android:textSize="24dp"
                    android:text="@string/sifre_degistir"
                    android:id="@+id/option4_changepassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:padding="8dp"
                    android:textSize="24dp"
                    android:text="@string/cikis_yap"
                    android:id="@+id/option5_signout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profileOptionsContainer">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>